--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@types/uuid": "^9.0.8",
     "dotenv": "^16.4.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@types/node": "^20.11.30",
+    "aws-sdk": "^2.1579.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.0.1",
+    "mime-types": "^2.1.35",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2",
     "sequelize": "^6.37.1",
     "uuid": "^9.0.1"
